# oai-smf

./: CHANGELOG.md  CONTRIBUTING.md  README.md  README.txt  dif.txt
src/api-server/: CMakeLists.txt  README.md  smf-api-server.cpp  smf-api-server.h  smf-http2-server.cpp  smf-http2-server.h
src/api-server/api/: IndividualPDUSessionHSMFApi.cpp  IndividualPDUSessionHSMFApi.h  IndividualSMContextApi.cpp  IndividualSMContextApi.h  IndividualSubscriptionDocumentApi.cpp  IndividualSubscriptionDocumentApi.h  NFStatusNotifyApi.cpp  NFStatusNotifyApi.h  PDUSessionsCollectionApi.cpp  PDUSessionsCollectionApi.h  SMContextsCollectionApi.cpp  SMContextsCollectionApi.h  SMFConfigurationApi.cpp  SMFConfigurationApi.h  SubscriptionsCollectionApi.cpp  SubscriptionsCollectionApi.h
src/api-server/impl/: IndividualPDUSessionHSMFApiImpl.cpp  IndividualPDUSessionHSMFApiImpl.h  IndividualSMContextApiImpl.cpp  IndividualSMContextApiImpl.h  IndividualSubscriptionDocumentApiImpl.cpp  IndividualSubscriptionDocumentApiImpl.h  NFStatusNotifyApiImpl.cpp  NFStatusNotifyApiImpl.h  PDUSessionsCollectionApiImpl.cpp  PDUSessionsCollectionApiImpl.h  SMContextsCollectionApiImpl.cpp  SMContextsCollectionApiImpl.h  SMFConfigurationApiImpl.cpp  SubscriptionsCollectionApiImpl.cpp  SubscriptionsCollectionApiImpl.h
src/api-server/model/: AccessType.cpp  AccessType.h  AdditionalQosFlowInfo.cpp  AdditionalQosFlowInfo.h  Ambr.cpp  Ambr.h  Arp.cpp  Arp.h  AtsssCapability.cpp  AtsssCapability.h  BackupAmfInfo.cpp  BackupAmfInfo.h  Cause.cpp  Cause.h  ChangeItem.cpp  ChangeItem.h  ChangeType.cpp  ChangeType.h  DddStatus.cpp  DddStatus.h  DddTrafficDescriptor.cpp  DddTrafficDescriptor.h  DnaiChangeType.cpp  DnaiChangeType.h  DnnSelectionMode.cpp  DnnSelectionMode.h  DnnUpfInfoItem.cpp  DnnUpfInfoItem.h  Dynamic5Qi.cpp  Dynamic5Qi.h  EbiArpMapping.cpp  EbiArpMapping.h  Ecgi.cpp  Ecgi.h  EpsBearerInfo.cpp  EpsBearerInfo.h  EpsInterworkingIndication.cpp  EpsInterworkingIndication.h  EpsPdnCnxInfo.cpp  EpsPdnCnxInfo.h  (+231 more)
src/nas/: 3gpp_24.501.h  CMakeLists.txt  nas_message.c  nas_message.h  networkDef.h  securityDef.h
src/nas/ies/: ABBA.c  ABBA.h  Additional5GSecurityInformation.c  Additional5GSecurityInformation.h  AdditionalInformation.c  AdditionalInformation.h  AllowedPDUSessionStatus.c  AllowedPDUSessionStatus.h  AllowedSSCMode.c  AllowedSSCMode.h  AlwaysonPDUSessionIndication.c  AlwaysonPDUSessionIndication.h  AlwaysonPDUSessionRequested.c  AlwaysonPDUSessionRequested.h  AuthenticationFailureParameter.c  AuthenticationFailureParameter.h  AuthenticationParameterAUTN.c  AuthenticationParameterAUTN.h  AuthenticationParameterRAND.c  AuthenticationParameterRAND.h  AuthenticationResponseParameter.c  AuthenticationResponseParameter.h  ConfigurationUpdateIndication.c  ConfigurationUpdateIndication.h  DNN.c  DNN.h  DaylightSavingTime.c  DaylightSavingTime.h  DeregistrationType.c  DeregistrationType.h  EAPMessage.c  EAPMessage.h  EPSNASMessageContainer.c  EPSNASMessageContainer.h  EPSNASSecurityAlgorithms.c  EPSNASSecurityAlgorithms.h  EmergencyNumberList.c  EmergencyNumberList.h  ExtendedEmergencyNumberList.c  ExtendedEmergencyNumberList.h  (+146 more)
src/nas/mm/: mmData.h
src/nas/mm/msg/: AuthenticationFailure.c  AuthenticationFailure.h  AuthenticationReject.c  AuthenticationReject.h  AuthenticationRequest.c  AuthenticationRequest.h  AuthenticationResponse.c  AuthenticationResponse.h  AuthenticationResult.c  AuthenticationResult.h  ConfigurationUpdateCommand.c  ConfigurationUpdateCommand.h  ConfigurationUpdateComplete.c  ConfigurationUpdateComplete.h  DLNASTransport.c  DLNASTransport.h  DeregistrationAccept.c  DeregistrationAccept.h  DeregistrationRequest.c  DeregistrationRequest.h  IdentityRequest.c  IdentityRequest.h  IdentityResponse.c  IdentityResponse.h  Notification.c  Notification.h  NotificationResponse.c  NotificationResponse.h  RegistrationAccept.c  RegistrationAccept.h  RegistrationComplete.c  RegistrationComplete.h  RegistrationReject.c  RegistrationReject.h  RegistrationRequest.c  RegistrationRequest.h  SecurityModeCommand.c  SecurityModeCommand.h  SecurityModeComplete.c  SecurityModeComplete.h  (+17 more)
src/nas/network/: as_message.h
src/nas/security/: kdf.c  key_nas_deriver.c  key_nas_encryption.c  nas_stream_nea1.c  nas_stream_nea2.c  nas_stream_nia1.c  nas_stream_nia2.c  rijndael.c  rijndael.h  secu_defs.h  snow3g.c  snow3g.h
src/nas/sm/: smMsgDef.h  sm_msg.c  sm_msg.h
src/nas/sm/msg/: PDUSessionAuthenticationCommand.c  PDUSessionAuthenticationCommand.h  PDUSessionAuthenticationComplete.c  PDUSessionAuthenticationComplete.h  PDUSessionAuthenticationResult.c  PDUSessionAuthenticationResult.h  PDUSessionEstablishmentAccept.c  PDUSessionEstablishmentAccept.h  PDUSessionEstablishmentReject.c  PDUSessionEstablishmentReject.h  PDUSessionEstablishmentRequest.c  PDUSessionEstablishmentRequest.h  PDUSessionModificationCommand.c  PDUSessionModificationCommand.h  PDUSessionModificationCommandReject.c  PDUSessionModificationCommandReject.h  PDUSessionModificationComplete.c  PDUSessionModificationComplete.h  PDUSessionModificationReject.c  PDUSessionModificationReject.h  PDUSessionModificationRequest.c  PDUSessionModificationRequest.h  _5GSMStatus.c  sm_msg.c  (+11 more)
src/nas/test/: NasMain.c
src/nwdaf-subscriber/: CMakeLists.txt  Dockerfile  client.cpp  client.h  docker-compose.yaml  mitigate_attack.cpp  mitigate_attack.h  server.cpp  server.h
src/nwdaf_subscriber/: CMakeLists.txt  client.cpp  main.cpp  server.cpp
src/smf_app/: CMakeLists.txt  smf_Nwdaf_sub.cpp  smf_app.cpp  smf_app.hpp  smf_config.cpp  smf_config.hpp  smf_config_types.cpp  smf_config_types.hpp  smf_context.cpp  smf_context.hpp  smf_event.cpp  smf_event.hpp  smf_event_sig.hpp  smf_msg.cpp  smf_msg.hpp  smf_n1.cpp  smf_n1.hpp  smf_n10.cpp  smf_n10.hpp  smf_n11.cpp  smf_n11.hpp  smf_n1_n2.cpp  smf_n1_n2.hpp  smf_n2.cpp  smf_n2.hpp  smf_n4.cpp  smf_n4.hpp  smf_n7.cpp  smf_n7.hpp  smf_ngap.cpp  smf_ngap.hpp  smf_paa_dynamic.hpp  smf_pco.cpp  smf_pco.hpp  smf_pfcp_association.cpp  smf_pfcp_association.hpp  smf_procedure.cpp  smf_procedure.hpp  smf_profile.cpp  smf_profile.hpp  (+4 more)
(+485 files in other folders)
